--- a/index.html
+++ b/index.html
@@ -3,61 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ytuploadappbranding - Home</title>
+    <title>ytuploadappbranding</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
-        body { background-color: #f8f9fa; }
-        .hero-section { background: white; padding: 60px 0; border-bottom: 1px solid #dee2e6; }
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #f9fafb;
+            color: #1f2937;
+        }
+        .navbar {
+            background-color: #ffffff;
+            border-bottom: 1px solid #e5e7eb;
+            padding: 1rem 0;
+        }
+        .navbar-brand {
+            font-weight: 600;
+            letter-spacing: -0.5px;
+            color: #111827 !important;
+        }
+        .hero {
+            padding: 80px 0;
+            background: white;
+        }
+        .feature-card {
+            background: white;
+            border: 1px solid #e5e7eb;
+            border-radius: 12px;
+            padding: 2rem;
+            height: 100%;
+            transition: transform 0.2s;
+        }
+        .feature-card:hover {
+            border-color: #d1d5db;
+            transform: translateY(-2px);
+        }
+        .btn-primary {
+            background-color: #000000;
+            border-color: #000000;
+            border-radius: 8px;
+            padding: 10px 24px;
+            font-weight: 500;
+        }
+        .btn-primary:hover {
+            background-color: #333333;
+            border-color: #333333;
+        }
+        footer {
+            border-top: 1px solid #e5e7eb;
+            margin-top: auto;
+        }
     </style>
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar">
         <div class="container">
             <a class="navbar-brand" href="#">ytuploadappbranding</a>
+            <div class="d-flex gap-3">
+                <a href="privacy.html" class="text-decoration-none text-muted small">Privacy</a>
+                <a href="terms.html" class="text-decoration-none text-muted small">Terms</a>
+            </div>
         </div>
     </nav>
 
-    <section class="hero-section text-center">
-        <div class="container">
-            <h1 class="display-4 fw-bold mb-3">ytuploadappbranding</h1>
-            <p class="lead text-muted mb-4">A personal automation tool for YouTube content management.</p>
-            <a href="mailto:gauravsingla2k@gmail.com" class="btn btn-primary btn-lg px-4">Contact Developer</a>
+    <section class="hero text-center">
+        <div class="container" style="max-width: 700px;">
+            <span class="badge bg-light text-dark border mb-3 rounded-pill px-3 py-2 fw-normal">Internal Tool v1.0</span>
+            <h1 class="display-5 fw-bold mb-4 text-dark" style="letter-spacing: -1px;">YouTube Upload Automation</h1>
+            <p class="lead text-secondary mb-5 fs-5">
+                A secure, local environment utility designed to streamline video uploads directly to the owner's channel via the YouTube Data API.
+            </p>
+            <div class="d-flex justify-content-center gap-3">
+                <a href="mailto:gauravsingla2k@gmail.com" class="btn btn-primary">Contact Developer</a>
+                <a href="privacy.html" class="btn btn-outline-secondary" style="border-radius: 8px;">View Privacy Policy</a>
+            </div>
         </div>
     </section>
 
     <div class="container my-5">
         <div class="row g-4">
             <div class="col-md-6">
-                <div class="card h-100 border-0 shadow-sm">
-                    <div class="card-body p-4">
-                        <h3 class="h5 fw-bold mb-3">App Purpose</h3>
-                        <p class="text-secondary">
-                            ytuploadappbranding is a utility designed to streamline video uploads to YouTube via the Google Data API. 
-                            It allows for automated metadata processing and direct video uploading from a local desktop environment 
-                            to the owner's specific channel.
-                        </p>
-                    </div>
+                <div class="feature-card">
+                    <h5 class="fw-bold mb-3">Secure Authentication</h5>
+                    <p class="text-secondary mb-0">Uses standard OAuth 2.0 protocols to ensure secure connectivity with Google services without exposing user credentials.</p>
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="card h-100 border-0 shadow-sm">
-                    <div class="card-body p-4">
-                        <h3 class="h5 fw-bold mb-3">Key Features</h3>
-                        <ul class="text-secondary mb-0">
-                            <li class="mb-2">Secure OAuth 2.0 authentication</li>
-                            <li class="mb-2">Automated video metadata processing</li>
-                            <li class="mb-2">Local-to-Cloud upload workflow</li>
-                        </ul>
-                    </div>
+                <div class="feature-card">
+                    <h5 class="fw-bold mb-3">Local Processing</h5>
+                    <p class="text-secondary mb-0">All video processing and token storage happens locally on your machine. No data is sent to external third-party servers.</p>
                 </div>
             </div>
         </div>
     </div>
 
-    <footer class="text-center py-4 text-muted border-top bg-white">
-        <div class="container">
-            <small>&copy; 2026 ytuploadappbranding. All rights reserved.</small>
+    <footer class="py-4 bg-white">
+        <div class="container text-center">
+            <p class="text-muted small mb-0">&copy; 2026 ytuploadappbranding. All rights reserved.</p>
         </div>
     </footer>
 
