--- a/privacy.html
+++ b/privacy.html
@@ -3,44 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - ytuploadappbranding</title>
+    <title>Privacy Policy</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #f3f4f6;
+            color: #374151;
+            line-height: 1.6;
+        }
+        .policy-container {
+            background: white;
+            max-width: 800px;
+            margin: 60px auto;
+            padding: 60px;
+            border-radius: 16px;
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05);
+        }
+        h1 {
+            font-weight: 700;
+            color: #111827;
+            letter-spacing: -0.5px;
+            margin-bottom: 0.5rem;
+        }
+        h2 {
+            font-size: 1.25rem;
+            font-weight: 600;
+            color: #111827;
+            margin-top: 2.5rem;
+            margin-bottom: 1rem;
+        }
+        .meta-text {
+            color: #6b7280;
+            font-size: 0.875rem;
+            margin-bottom: 3rem;
+        }
+        a { color: #000; text-decoration: underline; }
+    </style>
 </head>
-<body class="bg-light">
+<body>
 
-    <div class="container my-5">
-        <div class="row justify-content-center">
-            <div class="col-lg-8">
-                <div class="card shadow-sm border-0">
-                    <div class="card-body p-5">
-                        <h1 class="mb-4">Privacy Policy</h1>
-                        <p class="text-muted">Last Updated: January 17, 2026</p>
-                        <hr class="my-4">
+    <div class="container px-4">
+        <div class="policy-container">
+            <h1>Privacy Policy</h1>
+            <p class="meta-text">Last updated: January 17, 2026</p>
 
-                        <h4 class="mt-4">1. Introduction</h4>
-                        <p>This Privacy Policy describes how <strong>ytuploadappbranding</strong> ("we," "our," or "the App") handles your information. This application is a personal tool intended for internal use.</p>
+            <p>This Privacy Policy describes how <strong>ytuploadappbranding</strong> ("we," "our," or "the App") handles your information. This application is a personal tool intended for internal use.</p>
 
-                        <h4 class="mt-4">2. Data We Collect</h4>
-                        <p>The App accesses the following data through the Google YouTube Data API:</p>
-                        <ul>
-                            <li><strong>YouTube Channel Data:</strong> To identify the target channel for uploads.</li>
-                            <li><strong>Video Files:</strong> To upload content provided by the user from their local device.</li>
-                        </ul>
+            <h2>1. Data We Collect</h2>
+            <p>The App accesses the following data through the Google YouTube Data API:</p>
+            <ul>
+                <li><strong>YouTube Channel Data:</strong> To identify the target channel for uploads.</li>
+                <li><strong>Video Files:</strong> To upload content provided by the user from their local device.</li>
+            </ul>
 
-                        <h4 class="mt-4">3. How We Use Your Data</h4>
-                        <p>We use the data collected strictly for the purpose of functioning as a video upload tool:</p>
-                        <ul>
-                            <li><strong>Uploading:</strong> We use your credentials to authenticate with YouTube and upload the video files you select.</li>
-                            <li><strong>No External Sharing:</strong> We do not share, sell, or transfer your Google user data to any third parties. All authentication tokens are stored locally on the user's machine.</li>
-                        </ul>
+            <h2>2. How We Use Your Data</h2>
+            <p>We use the data collected strictly for the purpose of functioning as a video upload tool:</p>
+            <ul>
+                <li><strong>Uploading:</strong> We use your credentials to authenticate with YouTube and upload the video files you select.</li>
+                <li><strong>No External Sharing:</strong> We do not share, sell, or transfer your Google user data to any third parties. All authentication tokens are stored locally on the user's machine.</li>
+            </ul>
 
-                        <h4 class="mt-4">4. Data Retention</h4>
-                        <p>This App does not maintain an external database of your personal information. Authentication tokens (refresh tokens) are stored locally on your device and can be deleted by you at any time by clearing your local cache.</p>
+            <h2>3. Data Retention</h2>
+            <p>This App does not maintain an external database of your personal information. Authentication tokens (refresh tokens) are stored locally on your device and can be deleted by you at any time by clearing your local cache or revoking access via Google Security settings.</p>
 
-                        <h4 class="mt-4">5. Contact</h4>
-                        <p>If you have questions about this policy, please contact: <a href="mailto:gauravsingla2k@gmail.com">gauravsingla2k@gmail.com</a></p>
-                    </div>
-                </div>
+            <h2>4. Contact</h2>
+            <p>If you have questions about this policy, please contact us at: <a href="mailto:gauravsingla2k@gmail.com">gauravsingla2k@gmail.com</a></p>
+
+            <hr class="my-5" style="opacity: 0.1;">
+            <div class="text-center">
+                <a href="index.html" class="text-decoration-none text-muted small">&larr; Back to Home</a>
             </div>
         </div>
     </div>
